  * Allow Release files to generate SHA256 checksums as well.
    + Needs libdigest-sha-perl so changed debian/control accordingly.
  * Fixed problem where reuploading an orig tarball would be rejected
    even with the 'rollback' option set.
  * Bumped Standards-Version to 3.7.3.
    + Removed 'binary-arch' target in debian/rules to silence new lintian
      warning.

 -- Andres Mejia <mcitadel@gmail.com>  Thu, 03 Jan 2008 00:58:20 -0500

debpool (0.2.3) experimental; urgency=low

  * Handle sections with no subsection more usefully in
    Strip_Subsection. (Closes: #317390, #319959)
  * Refactor various bits to use Strip_Subsection, rather than re-
    implementing it badly. I don't know what on earth I was thinking,
    but things should behave better now. (Closes: #320062)
  * Don't hardcode the pool base path as 'pool'; determine it from
    archive_dir and pool_dir, instead. (Closes: #323625)
  * Updated to Policy 3.7.2.0 (no changes).
  * Moved dependancy on debhelper from Build-Depends-Indep to Build-
    Depends (to shut up various build tools).

 -- Joel Aelwyn <fenton@debian.org>  Mon,  3 Jul 2006 12:08:12 -0600

debpool (0.2.2) experimental; urgency=low

  * Handle stripping of epoch versions where they aren't used.
  * Properly handle each possibly version type (meta or 'package'
    version, source version, binary version(s)). This change is
    backward-compatible, but old version information will only work as
    well as it did in previous releases (that is, all of the versions
    are assumed to have the same value for a given package version).

 -- Joel Aelwyn <fenton@debian.org>  Wed, 23 Feb 2005 10:47:20 -0700

debpool (0.2.1) experimental; urgency=low

  * Added proper support for archive sections (contrib, non-free as
    separate from main). Unfortunately, this means changing the
    directory structure of the pool area. Thus, bumping to version to
    0.2.x
  * Rewrite and re-enable auditing of package area when a new version is